# cpp-codebase

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  organization.txt
build-scripts/: build_examples.py  build_tests.py  builder.py  config.txt  config_examples.py  config_shared_lib.py  config_tests.py  config_wizard.py  configurator.py  generate_custom_build.py
cmake/: dependencies.cmake  options.cmake
examples/: CMakeLists.txt  example1.cpp
include/core/: application.hpp  core.hpp  dependency.hpp  event.hpp  polymorphic.hpp  system.hpp  system.tpp
include/core/events/: message.hpp  runtime.hpp  start.hpp  topic.hpp  update.hpp
include/core/polymorphic/: polyid.hpp  polymanager.hpp  polymorphic.hpp
include/core/systems/: metadata.hpp  runtime.hpp  systems.hpp  window.hpp
src/: application.cpp  system.cpp
src/core/: application.cpp  polymorphic.cpp  system.cpp
src/polymorphic/: polymanager.cpp
src/systems/: metadata.cpp  runtime.cpp  window.cpp
